[gd_scene load_steps=4 format=2]

[ext_resource path="res://art assets/nodes/button_texture.png" type="Texture" id=1]
[ext_resource path="res://scripts/CollisionShape2D.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Area2D" type="Area2D" groups=[
"node",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 10, 10 )
shape = SubResource( 1 )
script = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 10, 20 )

[node name="Button" type="Button" parent="."]
margin_right = 20.0
margin_bottom = 20.0
flat = true
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 10, 10 )
texture = ExtResource( 1 )
[connection signal="area_entered" from="." to="CollisionShape2D" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="CollisionShape2D" method="_on_Area2D_area_exited"]
[connection signal="pressed" from="Button" to="CollisionShape2D" method="_on_Button_pressed"]
